Patch 6.2.050 Problem:    Test 32 didn't work on MS-Windows. Solution:   Write the temp file in Unix fileformat. (Walter Briscoe) Files:	    src/testdir/test32.in

--- a/src/testdir/test32.in
+++ b/src/testdir/test32.in
@@ -22,7 +22,7 @@ Test for insert expansion
 
 STARTTEST
 :so small.vim
-:se nocp viminfo+=nviminfo cpt=.,w|$-2,$w!Xtestfile
+:se nocp viminfo+=nviminfo cpt=.,w ff=unix | $-2,$w!Xtestfile | set ff&
 nO#include "Xtestfile"
 ru
 O
