--- a/src/configure.in
+++ b/src/configure.in
@@ -266,8 +266,9 @@ if test "$enable_perlinterp" = "yes"; then
       fi
       vi_cv_perllib=`$vi_cv_path_perl -MConfig -e 'print $Config{privlibexp}'`
       AC_SUBST(vi_cv_perllib)
+      dnl Remove "-fno-something", it breaks using cproto.
       perlcppflags=`$vi_cv_path_perl -Mlib=$srcdir -MExtUtils::Embed \
-	      -e 'ccflags;perl_inc'`
+	      -e 'ccflags;perl_inc' | sed -e 's/-fno[[^ ]]*//'`
       if test "X$perlcppflags" != "X"; then
 	PERL_CFLAGS="$perlcppflags"
       fi
