Patch 6.2.112 Problem:    After applying patches test32 fails. (Antonio Colombo) Solution:   Have "make clean" in the testdir delete *.rej and *.orig files. 	    Use this when doing "make clean" in the src directory. Files:	    src/Makefile, src/testdir/Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -1562,7 +1562,7 @@ test check:
 	cd testdir; $(MAKE) -f Makefile $(GUI_TESTTARGET) VIMPROG=../$(VIMTARGET)
 
 testclean:
-	-rm -f testdir/*.out testdir/test.log
+	cd testdir; $(MAKE) -f Makefile clean
 
 #
 # Avoid overwriting an existing executable, somebody might be running it and
