Patch 6.2.118 (extra) Problem:    Mac: Compiling is done in a non-standard way. Solution:   Use the Unix method for Mac OS X, with autoconf.  Add "CARBONGUI" 	    to Makefile and configure. (Eric Kow) 	    Move a few prototypes from os_mac.pro to gui_mac.pro. Files:	    src/Makefile, src/auto/configure, src/configure.in, 	    src/config.mk.in, src/gui_mac.c, src/os_mac.h, src/os_macosx.c, 	    src/proto/gui_mac.pro, src/proto/os_mac.pro, 	    src/infplist.xml, src/vim.h

--- a/src/config.mk.in
+++ b/src/config.mk.in
@@ -116,6 +116,7 @@ GUI_IPATH	= $(@GUITYPE@_IPATH)
 GUI_LIBS_DIR	= $(@GUITYPE@_LIBS_DIR)
 GUI_LIBS1	= $(@GUITYPE@_LIBS1)
 GUI_LIBS2	= $(@GUITYPE@_LIBS2)
+GUI_INSTALL	= $(@GUITYPE@_INSTALL)
 GUI_TARGETS	= $(@GUITYPE@_TARGETS)
 GUI_MAN_TARGETS	= $(@GUITYPE@_MAN_TARGETS)
 GUI_TESTTARGET	= $(@GUITYPE@_TESTTARGET)
