--- a/src/configure.in
+++ b/src/configure.in
@@ -75,6 +75,31 @@ case `uname` in
     *)		QNX=no; AC_MSG_RESULT(no);;
 esac
 
+dnl Check for Darwin and MacOS X
+dnl We do a check for MacOS X in the very beginning because there
+dnl are a lot of other things we need to change besides GUI stuff
+DEFAULT_VIMNAME=vim
+AC_MSG_CHECKING([for Darwin (Mac OS X)])
+if test "`(uname) 2>/dev/null`" = Darwin; then
+  AC_MSG_RESULT(yes)
+  MACOSX=yes
+  OS_EXTRA_SCR="os_macosx.c"; 
+  OS_EXTRA_OBJ="objects/os_macosx.o"
+  CFLAGS="$CFLAGS -DMACOS_X_UNIX"
+
+  dnl If Carbon is found, assume we don't want X11
+  dnl unless it was specifically asked for (--with-x)
+  AC_CHECK_HEADER(Carbon/Carbon.h, CARBON=yes)         
+  if test "x$CARBON" = "xyes"; then
+    if test -z "$with_x"; then
+      with_x=no
+      DEFAULT_VIMNAME=Vim
+    fi
+  fi
+else
+  AC_MSG_RESULT(no)
+fi
+
 AC_SUBST(OS_EXTRA_SRC)
 AC_SUBST(OS_EXTRA_OBJ)
 
@@ -106,7 +131,7 @@ fi
 AC_MSG_CHECKING(--with-vim-name argument)
 AC_ARG_WITH(vim-name, [  --with-vim-name=NAME    what to call the Vim executable],
 	VIMNAME="$withval"; AC_MSG_RESULT($VIMNAME),
-	VIMNAME="vim"; AC_MSG_RESULT(Defaulting to vim))
+	VIMNAME="$DEFAULT_VIMNAME"; AC_MSG_RESULT(Defaulting to $VIMNAME))
 AC_SUBST(VIMNAME)
 AC_MSG_CHECKING(--with-ex-name argument)
 AC_ARG_WITH(ex-name, [  --with-ex-name=NAME     what to call the Ex executable],
@@ -293,6 +318,28 @@ if test "$enable_perlinterp" = "yes"; then
      fi
     else
       AC_MSG_RESULT(>>> too old; need Perl version 5.003_01 or later <<<)
+    fi
+  fi
+
+  if test "x$MACOSX" == "xyes"; then 
+    dnl Mac OS X 10.2 or 10.3
+    dir=/System/Library/Perl
+    darwindir=$dir/darwin
+    if test -d $darwindir; then 
+      PERL=/usr/bin/perl
+    else
+      dnl Mac OS X 10.3
+      dir=/System/Library/Perl/5.8.1
+      darwindir=$dir/darwin-thread-multi-2level
+      if test -d $darwindir; then 
+	PERL=/usr/bin/perl
+      fi
+    fi
+    if test -n "$PERL"; then
+      PERL_DIR=$dir
+      PERL_CFLAGS=-DFEAT_PERL -I$darwindir/CORE
+      PERL_OBJ=if_perl.o if_perlsfio.o $darwindir/auto/DynaLoader/DynaLoader.a
+      PERL_LIBS=-lperl -L$darwindir/CORE
     fi
   fi
 fi
@@ -715,7 +762,7 @@ AC_MSG_RESULT($enable_fontset)
 dnl defining FEAT_XFONTSET is delayed, so that it can be disabled for no GUI
 
 test -z "$with_x" && with_x=yes
-test "${enable_gui-yes}" != no -a "x$QNX" != "xyes" && with_x=yes
+test "${enable_gui-yes}" != no -a "x$MACOSX" != "xyes" -a "x$QNX" != "xyes" && with_x=yes
 if test "$with_x" = no; then
   AC_MSG_RESULT(defaulting to: don't HAVE_X11)
 else
@@ -815,89 +862,96 @@ else
   fi
 fi
 
-test "x$with_x" = xno -a "x$BEOS" != "xyes" -a "x$QNX" != "xyes" && enable_gui=no
+test "x$with_x" = xno -a "x$BEOS" != "xyes" -a "x$MACOSX" != "xyes" -a "x$QNX" != "xyes" && enable_gui=no
 
 AC_MSG_CHECKING(--enable-gui argument)
 AC_ARG_ENABLE(gui,
- [  --enable-gui[=OPTS]     X11 GUI [default=auto] [OPTS=auto/no/gtk/gtk2/gnome/gnome2/motif/athena/neXtaw/beos/photon]], , enable_gui="auto")
+ [  --enable-gui[=OPTS]     X11 GUI [default=auto] [OPTS=auto/no/gtk/gtk2/gnome/gnome2/motif/athena/neXtaw/beos/photon/carbon]], , enable_gui="auto")
 
-## Canonicalize the --enable-gui= argument so that it can be easily compared.
-## Do not use character classes for portability with old tools.
+dnl Canonicalize the --enable-gui= argument so that it can be easily compared.
+dnl Do not use character classes for portability with old tools.
 enable_gui_canon=`echo "_$enable_gui" | \
 	sed 's/[[ _+-]]//g;y/ABCDEFGHIJKLMNOPQRSTUVWXYZ/abcdefghijklmnopqrstuvwxyz/'`
 
+dnl Skip everything by default.
+SKIP_GTK=YES
+SKIP_GTK2=YES
+SKIP_GNOME=YES
+SKIP_MOTIF=YES
+SKIP_ATHENA=YES
+SKIP_NEXTAW=YES
+SKIP_PHOTON=YES
+SKIP_BEOS=YES
+SKIP_CARBON=YES
+GUITYPE=NONE
+
 if test "x$BEOS" = "xyes"; then
-
-  SKIP_GTK=YES
-  SKIP_GTK2=YES
-  SKIP_GNOME=YES
-  SKIP_MOTIF=YES
-  SKIP_ATHENA=YES
-  SKIP_NEXTAW=YES
-  SKIP_PHOTON=YES
   SKIP_BEOS=
-  GUITYPE=NONE
-
   case "$enable_gui_canon" in
     no)		AC_MSG_RESULT(no GUI support)
 		SKIP_BEOS=YES ;;
     yes|"")	AC_MSG_RESULT(yes - automatic GUI support) ;;
     auto)	AC_MSG_RESULT(auto - automatic GUI support) ;;
     beos)	AC_MSG_RESULT(BeOS GUI support) ;;
-    *)		AC_MSG_RESULT([Sorry, $enable_gui GUI is not supported]) ;;
+    *)		AC_MSG_RESULT([Sorry, $enable_gui GUI is not supported])
+		SKIP_BEOS=YES ;;
   esac
 
 elif test "x$QNX" = "xyes" -a "x$with_x" = "xno" ; then
-  SKIP_GTK=YES
-  SKIP_GTK2=YES
-  SKIP_GNOME=YES
-  SKIP_MOTIF=YES
-  SKIP_ATHENA=YES
-  SKIP_NEXTAW=YES
-  SKIP_BEOS=YES
   SKIP_PHOTON=
-  GUITYPE=NONE
-
   case "$enable_gui_canon" in
     no)		AC_MSG_RESULT(no GUI support)
 		SKIP_PHOTON=YES ;;
     yes|"")	AC_MSG_RESULT(yes - automatic GUI support) ;;
     auto)	AC_MSG_RESULT(auto - automatic GUI support) ;;
     photon)	AC_MSG_RESULT(Photon GUI support) ;;
-    *)		AC_MSG_RESULT([Sorry, $enable_gui GUI is not supported]) ;;
+    *)		AC_MSG_RESULT([Sorry, $enable_gui GUI is not supported])
+		SKIP_PHOTON=YES ;;
+  esac
+
+elif test "x$MACOSX" = "xyes" -a "x$with_x" = "xno" ; then
+  SKIP_CARBON=
+  case "$enable_gui_canon" in
+    no)		AC_MSG_RESULT(no GUI support)
+		SKIP_CARBON=YES ;;
+    yes|"")	AC_MSG_RESULT(yes - automatic GUI support) ;;
+    auto)	AC_MSG_RESULT(auto - automatic GUI support) ;;
+    carbon)	AC_MSG_RESULT(Carbon GUI support) ;;
+    *)		AC_MSG_RESULT([Sorry, $enable_gui GUI is not supported])
+		SKIP_CARBON=YES ;;
   esac
 
 else
 
-  SKIP_GTK=
-  SKIP_GTK2=
-  SKIP_GNOME=
-  SKIP_MOTIF=
-  SKIP_ATHENA=
-  SKIP_NEXTAW=
-  SKIP_BEOS=YES
-  SKIP_PHOTON=YES
-  GUITYPE=NONE
 
   case "$enable_gui_canon" in
-    no|none)	AC_MSG_RESULT(no GUI support)
-		SKIP_GTK=YES; SKIP_GTK2=YES; SKIP_GNOME=YES; SKIP_MOTIF=YES; SKIP_ATHENA=YES; SKIP_NEXTAW=YES ;;
-    yes|"")	AC_MSG_RESULT(yes - automatic GUI support) ;;
-    auto)	AC_MSG_RESULT(auto - automatic GUI support) ;;
+    no|none)	AC_MSG_RESULT(no GUI support) ;;
+    yes|""|auto)	AC_MSG_RESULT(yes/auto - automatic GUI support)
+		SKIP_GTK=
+		SKIP_GTK2=
+		SKIP_GNOME=
+		SKIP_MOTIF=
+		SKIP_ATHENA=
+		SKIP_NEXTAW=
+		SKIP_CARBON=;;
     gtk)	AC_MSG_RESULT(GTK+ 1.x GUI support)
-		SKIP_GTK2=YES; SKIP_GNOME=YES; SKIP_MOTIF=YES; SKIP_ATHENA=YES; SKIP_NEXTAW=YES ;;
+		SKIP_GTK=;;
     gtk2)	AC_MSG_RESULT(GTK+ 2.x GUI support)
-		SKIP_GNOME=YES; SKIP_MOTIF=YES; SKIP_ATHENA=YES; SKIP_NEXTAW=YES ;;
+		SKIP_GTK=
+		SKIP_GTK2=;;
     gnome)	AC_MSG_RESULT(GNOME 1.x GUI support)
-		SKIP_GTK2=YES; SKIP_MOTIF=YES; SKIP_ATHENA=YES; SKIP_NEXTAW=YES ;;
+		SKIP_GNOME=
+		SKIP_GTK=;;
     gnome2)	AC_MSG_RESULT(GNOME 2.x GUI support)
-		SKIP_MOTIF=YES; SKIP_ATHENA=YES; SKIP_NEXTAW=YES ;;
+		SKIP_GNOME=
+		SKIP_GTK=
+		SKIP_GTK2=;;
     motif)	AC_MSG_RESULT(Motif GUI support)
-		SKIP_GTK=YES; SKIP_GNOME=YES; SKIP_ATHENA=YES; SKIP_NEXTAW=YES ;;
+		SKIP_MOTIF=;;
     athena)	AC_MSG_RESULT(Athena GUI support)
-		SKIP_GTK=YES; SKIP_GNOME=YES; SKIP_MOTIF=YES; SKIP_NEXTAW=YES ;;
+		SKIP_ATHENA=;;
     nextaw)	AC_MSG_RESULT(neXtaw GUI support)
-		SKIP_GTK=YES; SKIP_GNOME=YES; SKIP_MOTIF=YES; SKIP_ATHENA=YES ;;
+		SKIP_NEXTAW=;;
     *)		AC_MSG_RESULT([Sorry, $enable_gui GUI is not supported]) ;;
   esac
 
@@ -970,6 +1024,34 @@ if test "x$SKIP_NEXTAW" != "xYES" -a "$enable_gui_canon" != "nextaw"; then
   if test "x$enable_nextaw_check" = "xno"; then
     SKIP_NEXTAW=YES
   fi
+fi
+
+if test "x$SKIP_CARBON" != "xYES" -a "$enable_gui_canon" != "carbon"; then
+  AC_MSG_CHECKING(whether or not to look for Carbon)
+  AC_ARG_ENABLE(carbon-check,
+	[  --enable-carbon-check   If auto-select GUI, check for Carbon [default=yes]],
+	, enable_carbon_check="yes")
+  AC_MSG_RESULT($enable_carbon_check);
+  if test "x$enable_carbon_check" = "xno"; then
+    SKIP_CARBON=YES
+  fi
+fi
+
+if test "x$MACOSX" = "xyes" -a -z "$SKIP_CARBON" -a "x$CARBON" = "xyes"; then
+  AC_MSG_CHECKING(for Carbon GUI)
+  dnl already did this
+  AC_MSG_RESULT(yes);
+  GUITYPE=CARBONGUI
+  dnl skip everything else
+  SKIP_GTK=YES;
+  SKIP_GTK2=YES;
+  SKIP_GNOME=YES;
+  SKIP_MOTIF=YES;
+  SKIP_ATHENA=YES;
+  SKIP_NEXTAW=YES;
+  SKIP_PHOTON=YES;
+  SKIP_BEOS=YES;
+  SKIP_CARBON=YES
 fi
 
 
@@ -1567,6 +1649,12 @@ if test "$enable_fontset" = "yes"; then
   AC_DEFINE(FEAT_XFONTSET)
 fi
 
+
+dnl ---------------------------------------------------------------------------
+dnl end of GUI-checking 
+dnl ---------------------------------------------------------------------------
+
+
 dnl Only really enable hangul input when GUI and XFONTSET are available
 if test "$enable_hangulinput" = "yes"; then
   if test "x$GUITYPE" = "xNONE"; then
@@ -1622,12 +1710,17 @@ fi
 
 AC_CHECK_HEADERS(stdarg.h stdlib.h string.h sys/select.h sys/utsname.h \
 	termcap.h fcntl.h sgtty.h sys/ioctl.h sys/time.h termio.h \
-	iconv.h langinfo.h unistd.h stropts.h errno.h strings.h \
+	iconv.h langinfo.h unistd.h stropts.h errno.h \
 	sys/resource.h sys/systeminfo.h locale.h \
 	sys/stream.h sys/ptem.h termios.h libc.h sys/statfs.h \
 	poll.h sys/poll.h pwd.h utime.h sys/param.h libintl.h \
 	libgen.h util/debug.h util/msg18n.h frame.h \
 	sys/acl.h sys/access.h sys/sysctl.h sys/sysinfo.h)
+
+dnl On Mac OS X strings.h exists but produces a warning message :-(
+if test "x$MACOSX" != "xyes"; then
+  AC_CHECK_HEADERS(strings.h)
+fi
 
 dnl Check if strings.h and string.h can both be included when defined.
 AC_MSG_CHECKING([if strings.h can be included after string.h])
