--- a/src/configure.in
+++ b/src/configure.in
@@ -313,7 +313,7 @@ if test "$enable_perlinterp" = "yes"; then
       AC_SUBST(vi_cv_perllib)
       dnl Remove "-fno-something", it breaks using cproto.
       perlcppflags=`$vi_cv_path_perl -Mlib=$srcdir -MExtUtils::Embed \
-	      -e 'ccflags;perl_inc' | sed -e 's/-fno[[^ ]]*//'`
+	      -e 'ccflags;perl_inc;print"\n"' | sed -e 's/-fno[[^ ]]*//'`
       if test "X$perlcppflags" != "X"; then
 	PERL_CFLAGS="$perlcppflags"
       fi
