--- a/src/configure.in
+++ b/src/configure.in
@@ -13,6 +13,7 @@ AC_PROG_MAKE_SET
 dnl Checks for programs.
 AC_PROG_CC	dnl required by almost everything
 AC_PROG_CPP	dnl required by header file checks
+AC_PROGRAM_EGREP dnl required by AC_EGREP_CPP
 AC_ISC_POSIX	dnl required by AC_C_CROSS
 AC_PROG_AWK	dnl required for "make html" in ../doc
 
