Patch 6.2.169 Problem:    The prototype for _Xmblen() appears in a recent XFree86 header 	    file, causing a warning for our prototype. (Hisashi T Fujinaka) Solution:   Move the prototype to an osdef file, so that it's filtered out. Files:	    src/mbyte.c, src/osdef2.h.in

--- a/src/osdef2.h.in
+++ b/src/osdef2.h.in
@@ -79,3 +79,9 @@ extern char	*tmpnam __ARGS((char *));
 #else
 extern char	*mktemp __ARGS((char *));
 #endif
+
+#ifdef ISC
+extern int	_Xmblen __ARGS((char const *, size_t));
+#else
+extern int	_Xmblen __ARGS((char *, size_t));
+#endif
