--- a/src/osdef2.h.in
+++ b/src/osdef2.h.in
@@ -83,5 +83,6 @@ extern char	*mktemp __ARGS((char *));
 #ifdef ISC
 extern int	_Xmblen __ARGS((char const *, size_t));
 #else
+		/* This is different from the header but matches mblen() */
 extern int	_Xmblen __ARGS((char *, size_t));
 #endif
