Patch 6.2.177 (extra) Problem:    VisVim: Opening a file with a space in the name doesn't work. (Rob             Retter)  Arbitrary commands are being executed. (Neil Bird) Solution:   Put a backslash in front of every space in the file name.             (Gerard Blais)  Terminate the CTRL-\ CTRL-N command with a NUL. Files:      src/VisVim/Commands.cpp, src/VisVim/VisVim.rc

--- a/src/VisVim/VisVim.rc
+++ b/src/VisVim/VisVim.rc
@@ -116,7 +116,7 @@ END
 
 IDD_ADDINMAIN DIALOG DISCARDABLE  0, 0, 178, 124
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Vim Add-In 1.3a"
+CAPTION "Vim Add-In 1.4"
 FONT 8, "MS Sans Serif"
 BEGIN
     CONTROL         "&Open file in DevStudio editor simultaneously",
