Patch 6.2.196 (after 6.2.191) Problem:    Rebuilding the documentation doesn't use the sponsor.txt file. Solution:   Add sponsor.txt to the Makefile. (Christian J. Robinson) Files:	    runtime/doc/Makefile

--- a/runtime/doc/Makefile
+++ b/runtime/doc/Makefile
@@ -77,6 +77,7 @@ DOCS = \
 	rileft.txt \
 	scroll.txt \
 	sign.txt \
+	sponsor.txt \
 	starting.txt \
 	syntax.txt \
 	tagsrch.txt \
@@ -193,6 +194,7 @@ HTMLS = \
 	rileft.html \
 	scroll.html \
 	sign.html \
+	sponsor.html \
 	starting.html \
 	syntax.html \
 	tagsrch.html \
