--- a/src/configure.in
+++ b/src/configure.in
@@ -305,6 +305,22 @@ if test "$enable_perlinterp" = "yes"; then
     if $vi_cv_path_perl -e 'require 5.003_01' >/dev/null 2>/dev/null; then
      eval `$vi_cv_path_perl -V:usethreads`
      if test "X$usethreads" = "XUNKNOWN" -o "X$usethreads" = "Xundef"; then
+       badthreads=no
+     else
+       if $vi_cv_path_perl -e 'require 5.6.0' >/dev/null 2>/dev/null; then
+	 eval `$vi_cv_path_perl -V:use5005threads`
+	 if test "X$use5005threads" = "XUNKNOWN" -o "X$use5005threads" = "Xundef"; then
+	   badthreads=no
+	 else
+	   badthreads=yes
+	   AC_MSG_RESULT(>>> Perl > 5.6 with 5.5 threads cannot be used <<<)
+	 fi
+       else
+	 badthreads=yes
+	 AC_MSG_RESULT(>>> Perl 5.5 with threads cannot be used <<<)
+       fi
+     fi
+     if test $badthreads = no; then
       AC_MSG_RESULT(OK)
       eval `$vi_cv_path_perl -V:shrpenv`
       if test "X$shrpenv" = "XUNKNOWN"; then # pre 5.003_04
@@ -334,8 +350,6 @@ if test "$enable_perlinterp" = "yes"; then
       PERL_OBJ="objects/if_perl.o objects/if_perlsfio.o"
       PERL_PRO="if_perl.pro if_perlsfio.pro"
       AC_DEFINE(FEAT_PERL)
-     else
-      AC_MSG_RESULT(>>> Perl with threads cannot be used <<<)
      fi
     else
       AC_MSG_RESULT(>>> too old; need Perl version 5.003_01 or later <<<)
@@ -357,10 +371,10 @@ if test "$enable_perlinterp" = "yes"; then
       fi
     fi
     if test -n "$PERL"; then
-      PERL_DIR=$dir
-      PERL_CFLAGS=-DFEAT_PERL -I$darwindir/CORE
-      PERL_OBJ=if_perl.o if_perlsfio.o $darwindir/auto/DynaLoader/DynaLoader.a
-      PERL_LIBS=-L$darwindir/CORE -lperl
+      PERL_DIR="$dir"
+      PERL_CFLAGS="-DFEAT_PERL -I$darwindir/CORE"
+      PERL_OBJ="objects/if_perl.o objects/if_perlsfio.o $darwindir/auto/DynaLoader/DynaLoader.a"
+      PERL_LIBS="-L$darwindir/CORE -lperl"
     fi
   fi
 fi
@@ -475,7 +489,12 @@ eof
 	  PYTHON_CFLAGS="-I${vi_cv_path_python_pfx}/include/python${vi_cv_var_python_version} -I${vi_cv_path_python_epfx}/include/python${vi_cv_var_python_version}"
 	fi
 	PYTHON_SRC="if_python.c"
-	PYTHON_OBJ="objects/if_python.o objects/py_config.o"
+	dnl For Mac OSX 10.2 config.o is included in the Python library.
+	if test "x$MACOSX" = "xyes"; then 
+	  PYTHON_OBJ="objects/if_python.o"
+	else
+	  PYTHON_OBJ="objects/if_python.o objects/py_config.o"
+	fi
 	if test "${vi_cv_var_python_version}" = "1.4"; then
 	   PYTHON_OBJ="$PYTHON_OBJ objects/py_getpath.o"
 	fi
@@ -487,13 +506,16 @@ eof
 	dnl sigaltstack() will look in libc_r (it's there in libc!).
 	dnl Otherwise, when using GCC, try adding -pthread to $CFLAGS.  GCC
 	dnl will then define target-specific defines, e.g., -D_REENTRANT.
+	dnl Don't do this for Mac OSX, -pthread will generate a warning.
 	AC_MSG_CHECKING([if -pthread should be used])
 	threadsafe_flag=
 	thread_lib=
-	test "$GCC" = yes && threadsafe_flag="-pthread"
-	if test "`(uname) 2>/dev/null`" = FreeBSD; then
-	  threadsafe_flag="-D_THREAD_SAFE"
-	  thread_lib="-pthread"
+	if test "x$MACOSX" != "xyes"; then
+	  test "$GCC" = yes && threadsafe_flag="-pthread"
+	  if test "`(uname) 2>/dev/null`" = FreeBSD; then
+	    threadsafe_flag="-D_THREAD_SAFE"
+	    thread_lib="-pthread"
+	  fi
 	fi
 	if test -n "$threadsafe_flag"; then
 	  cflags_save=$CFLAGS
@@ -558,7 +580,12 @@ if test "$enable_tclinterp" = "yes"; then
       tclloc=`echo 'set l [[info library]];set i [[string last lib $l]];incr i -2;puts [[string range $l 0 $i]]' | $vi_cv_path_tcl -`
 
       AC_MSG_CHECKING(for location of Tcl include)
-      tclinc="$tclloc/include $tclloc/include/tcl $tclloc/include/tcl$tclver /usr/local/include"
+      if test "x$MACOSX" != "xyes"; then
+        tclinc="$tclloc/include $tclloc/include/tcl $tclloc/include/tcl$tclver /usr/local/include"
+      else
+	dnl For Mac OS X 10.3, use the OS-provided framework location
+	tclinc="/System/Library/Frameworks/Tcl.framework/Headers"
+      fi
       for try in $tclinc; do
 	if test -f "$try/tcl.h"; then
 	  AC_MSG_RESULT($try/tcl.h)
@@ -572,7 +599,12 @@ if test "$enable_tclinterp" = "yes"; then
       fi
       if test -z "$SKIP_TCL"; then
 	AC_MSG_CHECKING(for location of tclConfig.sh script)
-	tclcnf=`echo $tclinc | sed s/include/lib/g`
+	if test "x$MACOSX" != "xyes"; then
+	  tclcnf=`echo $tclinc | sed s/include/lib/g`
+	else
+	  dnl For Mac OS X 10.3, use the OS-provided framework location
+	  tclcnf="/System/Library/Frameworks/Tcl.framework"
+	fi
 	for try in $tclcnf; do
 	  if test -f $try/tclConfig.sh; then
 	    AC_MSG_RESULT($try/tclConfig.sh)
@@ -638,30 +670,44 @@ if test "$enable_rubyinterp" = "yes"; then
     AC_MSG_CHECKING(Ruby version)
     if $vi_cv_path_ruby -e 'VERSION >= "1.6.0" or exit 1' >/dev/null 2>/dev/null; then
       AC_MSG_RESULT(OK)
-      rubyhdrdir=`$vi_cv_path_ruby -r mkmf -e 'print Config::CONFIG[["archdir"]] || $hdrdir'`
-      RUBY_CFLAGS="-I$rubyhdrdir"
-      rubylibs=`$vi_cv_path_ruby -r rbconfig -e 'print Config::CONFIG[["LIBS"]]'`
-      if test "X$rubylibs" != "X"; then
-	RUBY_LIBS="$rubylibs"
-      fi
-      librubyarg=`$vi_cv_path_ruby -r rbconfig -e 'print Config.expand(Config::CONFIG[["LIBRUBYARG"]])'`
-      if test -f "$rubyhdrdir/$librubyarg"; then
-	librubyarg="$rubyhdrdir/$librubyarg"
-      else
-	librubyarg=`$vi_cv_path_ruby -r rbconfig -e "print '$librubyarg'.gsub(/-L\./, %'-L#{Config.expand(Config::CONFIG[\"libdir\"])}')"`
-      fi
+      AC_MSG_CHECKING(Ruby header files)
+      rubyhdrdir=`$vi_cv_path_ruby -r mkmf -e 'print Config::CONFIG[["archdir"]] || $hdrdir' 2>/dev/null`
+      if test "X$rubyhdrdir" != "X"; then
+	AC_MSG_RESULT($rubyhdrdir)
+	RUBY_CFLAGS="-I$rubyhdrdir"
+	rubylibs=`$vi_cv_path_ruby -r rbconfig -e 'print Config::CONFIG[["LIBS"]]'`
+	if test "X$rubylibs" != "X"; then
+	  RUBY_LIBS="$rubylibs"
+	fi
+	librubyarg=`$vi_cv_path_ruby -r rbconfig -e 'print Config.expand(Config::CONFIG[["LIBRUBYARG"]])'`
+	if test -f "$rubyhdrdir/$librubyarg"; then
+	  librubyarg="$rubyhdrdir/$librubyarg"
+	else
+	  rubylibdir=`$vi_cv_path_ruby -r rbconfig -e 'print Config.expand(Config::CONFIG[["libdir"]])'`
+	  if test -f "$rubylibdir/$librubyarg"; then
+	    librubyarg="$rubylibdir/$librubyarg"
+	  elif test "$librubyarg" = "libruby.a"; then
+	    dnl required on Mac OS 10.3 where libruby.a doesn't exist
+	    librubyarg="-lruby"
+	  else
+	    librubyarg=`$vi_cv_path_ruby -r rbconfig -e "print '$librubyarg'.gsub(/-L\./, %'-L#{Config.expand(Config::CONFIG[\"libdir\"])}')"`
+	  fi
+	fi
 
-      if test "X$librubyarg" != "X"; then
-	RUBY_LIBS="$librubyarg $RUBY_LIBS"
+	if test "X$librubyarg" != "X"; then
+	  RUBY_LIBS="$librubyarg $RUBY_LIBS"
+	fi
+	rubyldflags=`$vi_cv_path_ruby -r rbconfig -e 'print Config::CONFIG[["LDFLAGS"]]'`
+	if test "X$rubyldflags" != "X"; then
+	  LDFLAGS="$rubyldflags $LDFLAGS"
+	fi
+	RUBY_SRC="if_ruby.c"
+	RUBY_OBJ="objects/if_ruby.o"
+	RUBY_PRO="if_ruby.pro"
+	AC_DEFINE(FEAT_RUBY)
+      else
+	AC_MSG_RESULT(not found, disabling Ruby)
       fi
-      rubyldflags=`$vi_cv_path_ruby -r rbconfig -e 'print Config::CONFIG[["LDFLAGS"]]'`
-      if test "X$rubyldflags" != "X"; then
-	LDFLAGS="$rubyldflags $LDFLAGS"
-      fi
-      RUBY_SRC="if_ruby.c"
-      RUBY_OBJ="objects/if_ruby.o"
-      RUBY_PRO="if_ruby.pro"
-      AC_DEFINE(FEAT_RUBY)
     else
       AC_MSG_RESULT(too old; need Ruby version 1.6.0 or later)
     fi
