Patch 6.2.238 (after 6.2.231) Problem:    ":function" does not work inside a while loop. (Servatius Brandt) Solution:   Add get_while_line() and pass it to do_one_cmd() when in a while 	    loop, so that all lines are stored and can be used again when 	    repeating the loop. 	    Adjust test 49 so that it checks for the fixed problems. 	    (Servatius Brandt) Files:	    src/digraph.c, src/ex_cmds2.c, src/ex_docmd.c, src/ex_eval.c, 	    src/proto/ex_cmds2.pro, src/proto/ex_docmd.pro, 	    src/testdir/test49.in, src/testdir/test49.ok, 	    src/testdir/test49.vim

--- a/src/testdir/test49.in
+++ b/src/testdir/test49.in
@@ -7,7 +7,7 @@ STARTTEST
 :so small.vim
 :se nocp nomore
 :so test49.vim
-GGGGGGGGG"rp:.-,$wq! test.out
+GGGGGGGGGG"rp:.-,$wq! test.out
 ENDTEST
 
 Results of test49.vim:
