Patch 6.2.272 Problem:    When the "po" directory exists, but "po/Makefile" doesn't, 	    building fails.  Make loops when the "po" directory has been 	    deleted after running configure. Solution:   Check for the "po/Makefile" instead of just the "po" directory. 	    Check this again before trying to run make with that Makefile. Files:	    src/auto/configure, src/configure.in, src/Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -1494,10 +1494,10 @@ xxd/xxd$(EXEEXT): xxd/xxd.c
 # Build the language specific files if they were unpacked.
 # Generate the converted .mo files separately, it's no problem if this fails.
 languages:
-	@if test -n "$(MAKEMO)"; then \
+	@if test -n "$(MAKEMO)" -a -f $(PODIR)/Makefile; then \
 		cd $(PODIR); CC="$(CC)" $(MAKE) prefix=$(DESTDIR)$(prefix); \
 	fi
-	-@if test -n "$(MAKEMO)"; then \
+	-@if test -n "$(MAKEMO)" -a -f $(PODIR)/Makefile; then \
 		cd $(PODIR); CC="$(CC)" $(MAKE) prefix=$(DESTDIR)$(prefix) converted; \
 	fi
 
@@ -1765,7 +1765,7 @@ installtools: $(TOOLS) $(DESTDIR)$(exec_prefix) $(DEST_BIN) $(DEST_MAN) \
 
 # install the language specific files, if they were unpacked
 install-languages: languages $(DEST_LANG) $(DEST_KMAP)
-	if test -n "$(MAKEMO)"; then \
+	if test -n "$(MAKEMO)" -a -f $(PODIR)/Makefile; then \
 	   cd $(PODIR); $(MAKE) prefix=$(DESTDIR)$(prefix) LOCALEDIR=$(DEST_LANG) \
 	   INSTALL_DATA=$(INSTALL_DATA) FILEMOD=$(FILEMOD) install; \
 	fi
