--- a/src/configure.in
+++ b/src/configure.in
@@ -2475,7 +2475,7 @@ if test "$enable_nls" = "yes"; then
   AC_MSG_RESULT(no)
   AC_CHECK_PROG(MSGFMT, msgfmt, msgfmt, )
   AC_MSG_CHECKING([for NLS])
-  if test -d po; then
+  if test -f po/Makefile; then
     have_gettext="no"
     if test -n "$MSGFMT"; then
       AC_TRY_LINK(
@@ -2509,7 +2509,7 @@ if test "$enable_nls" = "yes"; then
 		AC_MSG_RESULT([no]))
     fi
   else
-    AC_MSG_RESULT([no "po" directory - disabled]);
+    AC_MSG_RESULT([no "po/Makefile" - disabled]);
   fi
 else
   AC_MSG_RESULT(yes)
