Patch 6.2.316 (after 6.2.312) Problem:    "make install" tries connecting to the X server when installing 	    the docs. (Stephen Thomas) Solution:   Add the "-X" argument. Files:	    runtime/doc/Makefile

--- a/runtime/doc/Makefile
+++ b/runtime/doc/Makefile
@@ -256,7 +256,7 @@ all: tags vim.man vimdiff.man vimtutor.man xxd.man
 # Use Vim to generate the tags file.  Can only be used when Vim has been
 # compiled and installed.  Supports multiple languages.
 vimtags: $(DOCS)
-	$(VIMEXE) -e -s -c "helptags ." -c quit
+	$(VIMEXE) -e -s -X -c "helptags ." -c quit
 
 # Use "doctags" to generate the tags file.  Only works for English!
 tags: doctags $(DOCS)
