--- a/src/vim.rc
+++ b/src/vim.rc
@@ -46,6 +46,18 @@ IDR_VIM_QUESTION ICON "vim_quest.ico"
 //
 IDB_TEAROFF	BITMAP  DISCARDABLE  "tearoff.bmp"
 IDR_TOOLBAR1	BITMAP  DISCARDABLE  "tools.bmp"
+
+//
+// WinXP theme support
+//
+#ifndef CREATEPROCESS_MANIFEST_RESOURCE_ID
+# define CREATEPROCESS_MANIFEST_RESOURCE_ID 1
+#endif
+#ifndef RT_MANIFEST
+# define RT_MANIFEST 24
+#endif
+
+CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "gvim.exe.mnf"
 #endif // FEAT_GUI_W32
 
 //
