Patch 6.2.382 Problem:    Running "make test" puts marks from test files in viminfo. Solution:   Specify a different viminfo file to use. Files:	    src/testdir/test15.in, src/testdir/test49.in

--- a/src/testdir/test49.in
+++ b/src/testdir/test49.in
@@ -5,7 +5,7 @@ test49.failed, try to add one ore more "G"s at the line before ENDTEST.
 
 STARTTEST
 :so small.vim
-:se nocp nomore
+:se nocp nomore viminfo+=nviminfo
 :so test49.vim
 GGGGGGGGGG"rp:.-,$wq! test.out
 ENDTEST
