Patch 6.2.404 Problem:    Our own function to determine width of Unicode characters may get 	    outdated. (Markus Kuhn) Solution:   Use wcwidth() when it is available.  Also use iswprint(). Files:	    src/auto/configure, src/configure.in, src/config.h.in, src/mbyte.c

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -222,6 +222,7 @@
 #undef HAVE_SYS_SYSTEMINFO_H
 #undef HAVE_SYS_TIME_H
 #undef HAVE_SYS_UTSNAME_H
+#undef HAVE_WCHAR_H
 #undef HAVE_TERMCAP_H
 #undef HAVE_TERMIOS_H
 #undef HAVE_TERMIO_H
