Patch 6.2.496 Problem:    FreeBSD 4.x: When compiled with the pthread library (Python) a 	    complicated pattern may cause Vim to crash.  Catching the signal 	    doesn't work. Solution:   When compiled with threads, instead of using the normal stacksize 	    limit, use the size of the initial stack. Files:	    src/auto/configure, src/config.h.in, src/configure.in, 	    src/os_unix.c

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -200,6 +200,7 @@
 #undef HAVE_LOCALE_H
 #undef HAVE_NDIR_H
 #undef HAVE_POLL_H
+#undef HAVE_PTHREAD_NP_H
 #undef HAVE_PWD_H
 #undef HAVE_SETJMP_H
 #undef HAVE_SGTTY_H
